# FlatMk-v0

./: .gitignore  .gitmodules  README.md
api/: generate_all.sh
api/book/: book.toml
api/book/src/: SUMMARY.md  call-tree.md  core-concepts.md  introduction.md  kernel-mode.md  scheduling-ipc.md  softuser-mode.md  task-endpoint.md  three-modes.md  user-mode.md  usermode-interface.md
api/flatmk-apigen/: Cargo.toml
api/flatmk-apigen/src/: main.rs
api/spec/: flatmk.toml
kernel/: Cargo.toml  run.sh
kernel/linkers/: x86_64.ld
kernel/scripts/: generate_all.sh  generate_interrupts_idt.py  generate_interrupts_impl.py
kernel/src/: addr.rs  boot.rs  capability.rs  debug.rs  direct.rs  elf.rs  error.rs  exception.rs  kobj.rs  main.rs  multilevel.rs  pagealloc.rs  paging.rs  scheduler.rs  serial.rs  softuser.rs  spec.rs  syscall.rs  task.rs  user.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: addr.rs  apic.rs  asm.s  asm_import.rs  config.rs  exception.rs  init.rs  mod.rs  page_table.rs  softuser.rs  task.rs  tlb.rs
kernel/targets/: x86_64-unknown-none.json
tools/: gen_bytes.py
tools/elf-preloader/: Cargo.toml
tools/elf-preloader/src/: main.rs
user/: build.sh  x86_64-flatmk.json
user/bindings/c/: flatmk_spec.h  spec.h  spec_softuser.h
user/bindings/rust/: Cargo.toml
user/bindings/rust/src/: lib.rs  spec.rs
user/drivers/benchmark/: Makefile  echo_elf.h  ipc_return_elf.h  main.c
user/drivers/gclock/: Makefile  main.c
user/drivers/include/: allocator.h  arch.h  capalloc.h  debug.h  driver_start.h  elfloader.h  fastipc.h  reentrancy_guard.h  sched.h  shmem.h  softuser.h  stdcaps.h  stddriver.h  throw.h
user/drivers/input/: Makefile  main.c
user/drivers/libelfloader/: Cargo.toml
user/drivers/libelfloader/src/: lib.rs
user/drivers/libflatrt/: Cargo.toml
user/drivers/libflatrt/src/: capalloc.rs  elfloader.rs  lib.rs  linux_mm.rs  malloc.rs
user/drivers/sequencer-linux/: Makefile  elfloader.h  fd.h  io.c  io.h  linux_task.h  local_caps.h  main.c  mm.h  syscalls.c  syscalls.h
user/drivers/sequencer-linux/linux/: gen_bytes.py  init.c
user/drivers/support/: shmem.c  softuser.c  start.c  thread.c
user/drivers/vga/: Makefile  main.c  vgamode.c  vgamode.h
user/early/: x86_64-flatmk-early.json
user/early/flatrt-allocator/: Cargo.toml
user/early/flatrt-allocator/src/: lib.rs
user/early/flatrt-capalloc/: Cargo.toml
user/early/flatrt-capalloc/src/: lib.rs
user/early/flatrt-elfloader/: Cargo.toml
user/early/flatrt-elfloader/src/: lib.rs  softuser.rs
user/early/flatrt-fastipc/: Cargo.toml
user/early/flatrt-fastipc/src/: lib.rs
user/early/flatrt-init/: Cargo.toml
user/early/flatrt-init/src/: caps.rs  debug.rs  image.rs  layout.rs  main.rs
user/early/flatrt-ipc/: Cargo.toml
user/early/flatrt-ipc/src/: lib.rs
user/early/flatrt-scheduler/: Cargo.toml
user/early/flatrt-scheduler/src/: caps.rs  main.rs
user/early/flatrt-shmem/: Cargo.toml
user/early/flatrt-shmem/src/: caps.rs  main.rs
user/early/flatrt-thread/: Cargo.toml
user/early/flatrt-thread/src/: lib.rs
user/flatruntime-user/: Cargo.toml
user/flatruntime-user/src/: allocator.rs  capset.rs  elf.rs  error.rs  interrupt.rs  io.rs  ipc.rs  layout.rs  lib.rs  mm.rs  root.rs  syscall.rs  task.rs  thread.rs
user/init/: Cargo.toml  build.sh  x86_64-flatmk.json  x86_64.ld
user/init/src/: image.rs  main.rs  serial.rs  vga.rs
user/libflatrt/: Cargo.toml  build.rs
user/libflatrt/src/: lib.rs
user/scheduler/: Cargo.toml
user/scheduler-api/: Cargo.toml
user/scheduler-api/src/: lib.rs
user/scheduler/src/: main.rs
user/shmem-api/: Cargo.toml
user/shmem-api/src/: lib.rs
user/shmemd/: Cargo.toml
user/shmemd/src/: main.rs
user/softuser/: riscv32-flatmk-softuser.json
user/softuser/echo/: Cargo.toml
user/softuser/echo/src/: main.rs
user/softuser/flatrt-softuser/: Cargo.toml
user/softuser/flatrt-softuser/src/: lib.rs
user/softuser/ipc-return/: Cargo.toml
user/softuser/ipc-return/src/: main.rs
user/vga/: Cargo.toml
user/vga-api/: Cargo.toml
user/vga/src/: main.rs  vga.rs
