[package]
name = "kernel"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { path = "../bootloader", features = ["map_physical_memory", "vesa_1024x768"] }
x86 = "0.34"
x86_64 = "0.11"
spin = "0.5"
pic8259_simple = "0.2"
bitflags = "1.2"
num_enum = { version = "0.4", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bit_field = { version = "0.10" }
flatrv = { version = "0.1.1", default-features = false }

[features]
x86_pcid = []

[package.metadata.bootloader]
kernel-stack-address = "0xFFFFFF8000000000"
kernel-stack-size = 512
physical-memory-offset = "0xFFFF800000000000"
