[package]
name = "flatruntime-user"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = { git = "https://github.com/losfair/wee_alloc_ck", features = ["size_classes", "generic_mmap_backend"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.5"
num_enum = { version = "0.4", default-features = false }
goblin = { version = "0.1", default-features = false, features = ["elf64"] }

[features]
static_stack = []
