[package]
name = "flatrt-allocator"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatmk-sys = { path = "../../bindings/rust" }
wee_alloc = { git = "https://github.com/losfair/wee_alloc_ck", features = ["size_classes", "generic_mmap_backend"] }
spin = "0.5"
