[package]
name = "flatrt-elfloader"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatmk-sys = { path = "../../bindings/rust" }
goblin = { version = "0.1", default-features = false, features = ["elf32", "elf64"] }
spin = "0.5"
