[package]
name = "flatrt-thread"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatmk-sys = { path = "../../bindings/rust" }
flatrt-allocator = { path = "../flatrt-allocator" }
spin = "0.5"
